--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,3 +17,4 @@ jobs:
           script: |
             cd ${{ secrets.SERVER_DIRECTORY }}
             git pull origin main
+            npm run build
